--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
     "pg": "^7.18.2",
     "sequelize": "^5.21.5"
   },
