--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "development": {
         "username": "postgres",
-        "password": "q1w2e3r4t5",
+        "password": "20012020",
         "database": "bookRental",
         "host": "127.0.0.1",
         "dialect": "postgres"
